# ansible-collection-nifcloud

./: .gitignore  README.md  galaxy.yml  pyproject.toml
plugins/doc_fragments/: nifcloud_credentials.py  nifcloud_region.py
plugins/inventory/: nifcloud_computing.py
plugins/module_utils/: core.py
plugins/modules/: computing_key.py
