[build-system]
build-backend = ["pdm.pep517.api"]
requires = ["pdm-pep517"]

[tool]
[tool.pdm]
author = "tottoto <tottotodev@gmail.com>"
description = ""
homepage = ""
license = "GPL-3.0"
name = "ansible-collection-nifcloud"
python_requires = ">=3.8"
version = "0.1.0"

[tool.pdm.dependencies]
nifcloud = "==0.3.1"

[tool.pdm.dev-dependencies]
ansible = ">=2.10.0"
autopep8 = "*"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.autopep8]
max_line_length = 100
