[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[project]
authors = [
    {name = "tottoto", email = "tottotodev@gmail.com"},
]
name = "ansible-collection-nifcloud"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "GPL-3.0"}
dependencies = [
    "nifcloud==0.3.1",
]
dev-dependencies = [
    "ansible>=2.10.0",
    "autopep8",
]

[project.urls]
homepage = "https://github.com/tottoto/ansible-collection-nifcloud"

[tool.autopep8]
max_line_length = 100
